--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,7 @@
 @import "tailwindcss";
-html {
-  transition: background-color 0.3s, color 0.3s;
+
+@custom-variant dark (&:where(.dark &));
+
+body {
+  @apply bg-white text-slate-900 dark:bg-slate-900 dark:text-white;
 }
